Club NME: Stop nav jumping for modals

--- a/_scss/club/_global.scss
+++ b/_scss/club/_global.scss
@@ -75,3 +75,9 @@ hr {
     text-decoration: none;
   }
 }
+
+.modal-open {
+  .fixed-top {
+    padding-right: 0 !important;
+  }
+}
